--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext{
+        navigationVersion = '1.0.0-rc02'
+        kotlin_version = '1.3.50'
+        roomVersion = '2.2.1'
+        archLifecycleVersion = '2.2.0-rc02'
+        androidxArchVersion = '2.1.0'
+        coreTestingVersion = "2.1.0"
+        coroutines = '1.3.2'
+        materialVersion = "1.0.0"
+        coroutineVersion = "1.0.0"
+    }
     repositories {
         google()
         jcenter()
@@ -10,9 +20,9 @@ buildscript {
     dependencies {
         def nav_version = "2.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
